--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
+            // Controleer of de URL de 'view=display' parameter bevat
+            const params = new URLSearchParams(window.location.search);
+            const isDisplay = params.get('view') === 'display';
+
+            // Alleen geluid afspelen als de 'view=display' parameter aanwezig is
+            const sound = isDisplay ? new Audio("https://drive.google.com/uc?export=download&id=1f3K3Qoq98CNRUbM8RZ97dJbl49-0UkxQ") : null;
+
             function hideIfNeeded() {
-                const params = new URLSearchParams(window.location.search);
-                const view = params.get('view');
-                if (view === 'display') {
+                if (isDisplay) {
                     const elementsToHide = document.querySelectorAll('.hide-if-needed');
                     elementsToHide.forEach(el => {
                         el.style.display = 'none';
@@ -49,7 +54,6 @@
                     teamInputElements.forEach((el) => {
                         el.setAttribute("disabled", "true");
                     });
-
                 } else {
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
                     elementsToShow.forEach(el => {
@@ -118,11 +122,19 @@
                         updateDatabase();
                     }
                 }, 1000);
+
+                if (isDisplay && sound) {
+                    sound.play(); // Start het geluid wanneer de timer start, maar alleen voor de display
+                }
             }
 
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
+                if (isDisplay && sound) {
+                    sound.pause(); // Stop het geluid wanneer de timer stopt
+                    sound.currentTime = 0; // Zet het geluid terug naar het begin
+                }
             }
 
             function resetTimer() {
