--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script defer>
+        // Fullscreen functie
+        function openFullscreen() {
+            if (document.documentElement.requestFullscreen) {
+                document.documentElement.requestFullscreen();
+            } else if (document.documentElement.mozRequestFullScreen) { // Firefox
+                document.documentElement.mozRequestFullScreen();
+            } else if (document.documentElement.webkitRequestFullscreen) { // Chrome, Safari and Opera
+                document.documentElement.webkitRequestFullscreen();
+            } else if (document.documentElement.msRequestFullscreen) { // IE/Edge
+                document.documentElement.msRequestFullscreen();
+            }
+        }
+
         document.addEventListener("DOMContentLoaded", () => {
             const firebaseConfig = {
                 apiKey: "", // Geen API Key nodig zonder Web App
@@ -28,15 +41,13 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
-            // Controleer of de URL de 'view=display' parameter bevat
-            const params = new URLSearchParams(window.location.search);
-            const isDisplay = params.get('view') === 'display';
-
-            // Alleen geluid afspelen als de 'view=display' parameter aanwezig is
-            const sound = isDisplay ? new Audio("https://drive.google.com/uc?export=download&id=1f3K3Qoq98CNRUbM8RZ97dJbl49-0UkxQ") : null;
+            // Audio element voor het geluid
+            const sound = document.getElementById('timer-sound'); // Haal het audiobestand op uit de HTML
 
             function hideIfNeeded() {
-                if (isDisplay) {
+                const params = new URLSearchParams(window.location.search);
+                const view = params.get('view');
+                if (view === 'display') {
                     const elementsToHide = document.querySelectorAll('.hide-if-needed');
                     elementsToHide.forEach(el => {
                         el.style.display = 'none';
@@ -54,6 +65,7 @@
                     teamInputElements.forEach((el) => {
                         el.setAttribute("disabled", "true");
                     });
+
                 } else {
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
                     elementsToShow.forEach(el => {
@@ -123,19 +135,17 @@
                     }
                 }, 1000);
 
-                // Start het geluid **bij klikken op Start**
-                if (isDisplay && sound) {
-                    sound.play();
-                }
+                // Start het geluid wanneer de timer begint
+                sound.play();
             }
 
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
-                if (isDisplay && sound) {
-                    sound.pause(); // Stop het geluid
-                    sound.currentTime = 0; // Zet het geluid terug naar het begin
-                }
+
+                // Stop het geluid wanneer de timer stopt
+                sound.pause();
+                sound.currentTime = 0;  // Zet het geluid terug naar het begin
             }
 
             function resetTimer() {
@@ -475,5 +485,14 @@
             <button id="setTimeBtn" class="hide-if-needed">Doorvoeren</button>
         </div>
     </div>
+
+    <!-- Voeg hier de audio toe -->
+    <audio id="timer-sound" preload="auto">
+        <source src="https://www.dropbox.com/scl/fi/ipjplb80lc2748nz5zyjo/timer-2.mp3?rlkey=7r1p39o60jbytbm3oz7jhpex5&st=fgyutdzf&raw=1" type="audio/mp3">
+        Je browser ondersteunt deze audio niet.
+    </audio>
+
+    <!-- Voeg een extra knop toe voor fullscreen -->
+    <button id="fullscreenBtn">Volledig Scherm</button>
 </body>
 </html>
