--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
@@ -27,6 +27,9 @@
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
+
+            // Audio element voor timer geluid
+            const timerSound = document.getElementById("timerSound");
 
             function hideIfNeeded() {
                 const params = new URLSearchParams(window.location.search);
@@ -118,11 +121,26 @@
                         updateDatabase();
                     }
                 }, 1000);
+
+                // Speel het geluid af als de juiste 'view=display' modus actief is
+                const params = new URLSearchParams(window.location.search);
+                const view = params.get('view');
+                if (view === 'display') {
+                    timerSound.play(); // Speel het geluid af
+                }
             }
 
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
+
+                // Stop het geluid
+                const params = new URLSearchParams(window.location.search);
+                const view = params.get('view');
+                if (view === 'display') {
+                    timerSound.pause();  // Stop het geluid
+                    timerSound.currentTime = 0;  // Zet het geluid terug naar het begin
+                }
             }
 
             function resetTimer() {
@@ -437,6 +455,12 @@
             <div id="timer3">60</div>
         </div>
     </div>
+
+    <!-- Voeg het audio element toe -->
+    <audio id="timerSound" preload="auto">
+        <source src="https://www.dropbox.com/scl/fi/ipjplb80lc2748nz5zyjo/timer-2.mp3?raw=1" type="audio/mp3">
+        Je browser ondersteunt het afspelen van audio niet.
+    </audio>
 
     <div class="controls">
         <div class="row">
