--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
     <!-- Voeg het audio element toe -->
     <audio id="timerSound" preload="auto">
-        <source src="https://www.dropbox.com/scl/fi/ipjplb80lc2748nz5zyjo/timer-2.mp3?raw=1" type="audio/mp3">
+        <source src="https://www.dropbox.com/scl/fi/ipjplb80lc2748nz5zyjo/timer-2.mp3?rlkey=7r1p39o60jbytbm3oz7jhpex5&st=ic447kh9&raw=1" type="audio/mp3">
         Je browser ondersteunt het afspelen van audio niet.
     </audio>
 
