--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
                     }
                 }, 1000);
 
-                // Speel het timer geluid af wanneer de timer start
-                timerSound.play().catch((error) => {
-                    console.log("Audio kon niet worden afgespeeld:", error);
-                });
+                // Speel het timer geluid af wanneer de timer start, alleen als het geluid nog niet wordt afgespeeld
+                if (timerSound.paused) {
+                    timerSound.play().catch((error) => {
+                        console.log("Audio kon niet worden afgespeeld:", error);
+                    });
+                }
             }
 
             // Stop de timer en stop het geluid + speel stop geluid
@@ -136,14 +138,16 @@
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
 
-                // Stop het timer geluid
+                // Stop het timer geluid en reset het
                 timerSound.pause();
                 timerSound.currentTime = 0;
 
-                // Speel het stop geluid af
-                stopSound.play().catch((error) => {
-                    console.log("Stop geluid kon niet worden afgespeeld:", error);
-                });
+                // Speel het stop geluid af, alleen als het stop geluid nog niet wordt afgespeeld
+                if (stopSound.paused) {
+                    stopSound.play().catch((error) => {
+                        console.log("Stop geluid kon niet worden afgespeeld:", error);
+                    });
+                }
             }
 
             function resetTimer() {
@@ -458,18 +462,6 @@
             <div id="timer3">60</div>
         </div>
     </div>
-
-    <!-- Audio voor het starten van de timer -->
-    <audio id="timerSound" preload="auto">
-        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/audio/timer-sound.mp3" type="audio/mp3">
-        Je browser ondersteunt het afspelen van audio niet.
-    </audio>
-
-    <!-- Audio voor het stoppen van de timer -->
-    <audio id="stopSound" preload="auto">
-        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/audio/timer-sound-end.mp3" type="audio/mp3">
-        Je browser ondersteunt het afspelen van audio niet.
-    </audio>
 
     <div class="controls">
         <div class="row">
